--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
         <scope>test</scope>
       </dependency>
 
-      <dependency>
+      <dependency>gi
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>1.8.5</version>
@@ -207,10 +207,10 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:git:git@github.com:jleetutorial/maven-project.git</connection>
-    <developerConnection>scm:git:git@github.com:jleetutorial/maven-project.git</developerConnection>
+    <connection>scm:git@github.com:Kaanishka/maven-project.git</connection>
+    <developerConnection>scm:git@github.com:Kaanishka/maven-project.git</developerConnection>
     <tag>HEAD</tag>
-    <url>http://github.com/jleetutorial/maven-project</url>
+    <url>https://github.com/Kaanishka/maven-project.git</url>
   </scm>
 
   <prerequisites>
