--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
         <scope>test</scope>
       </dependency>
 
-      <dependency>gi
+      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>1.8.5</version>
