--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,10 +10,10 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>my-app</artifactId>
+  <artifactId>webapp</artifactId>
   <packaging>war</packaging>
-  <name>my-app</name>
-  <description>my-app.</description>
+  <name>webapp</name>
+  <description>webapp.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
